force-app/main/default/objects/Invoicee__c/Invoicee__c.object-meta.xml
<CustomObject>
    <label>Invoicee</label>
    <nameField>
        <displayFormat>INVO-{00000}</displayFormat>
        <label>Invoicee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoicee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>