force-app/main/default/objects/Invoicee__c/fields/Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Payment_Count__c</fullName>
    <label>Payment Count</label>
    <summaryForeignKey>Paymentt__c.Invoicee__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>