force-app/main/default/objects/Invoicee__c/fields/Service_Orderr__c.field-meta.xml
<CustomField>
    <fullName>Service_Orderr__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Orderr</label>
    <referenceTo>Service_Orderr__c</referenceTo>
    <relationshipLabel>Invoicee</relationshipLabel>
    <relationshipName>Invoicee</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>