force-app/main/default/objects/Invoicee__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summarizedField>Paymentt__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Paymentt__c.Invoicee__c</summaryForeignKey>
    <summaryFilterItems>
        <field>Paymentt__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>