force-app/main/default/objects/Invoicee__c/fields/Vehiclee__c.field-meta.xml
<CustomField>
    <fullName>Vehiclee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehiclee</label>
    <referenceTo>Vehiclee__c</referenceTo>
    <relationshipLabel>Invoicee</relationshipLabel>
    <relationshipName>Invoicee</relationshipName>
    <type>Lookup</type>
</CustomField>