force-app/main/default/objects/Invoicee__c/validationRules/Amount_Paid_Cannot_Exceed_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Paid_Cannot_Exceed_total</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &gt;  Total_Amount__c</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>Amount Paid cannot exceed Total Amount</errorMessage>
</ValidationRule>