force-app/main/default/objects/Invoicee__c/validationRules/Balance_Due_Cannot_Be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Balance_Due_Cannot_Be_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Balance_Due__c &lt; 0</errorConditionFormula>
    <errorMessage>Balance Due cannot be negative</errorMessage>
</ValidationRule>