force-app/main/default/objects/Invoicee__c/validationRules/Cancelled_Invoice_Cannot_Be_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_Invoice_Cannot_Be_Paid</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Invoice_Status__c, &quot;Cancelled&quot;),
    Amount_Paid__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Invoice_Status__c</errorDisplayField>
    <errorMessage>A Cancelled invoice cannot have a payment amount</errorMessage>
</ValidationRule>