force-app/main/default/objects/Invoicee__c/validationRules/Due_Date_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; Invoice_Date__c</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>Due Date cannot be earlier than invoice date</errorMessage>
</ValidationRule>