force-app/main/default/objects/Invoicee__c/validationRules/Invoice_Date_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_Date_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Invoice_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Invoice_Date__c</errorDisplayField>
    <errorMessage>Invoice Date cannot be in future</errorMessage>
</ValidationRule>