force-app/main/default/objects/Invoicee__c/validationRules/Issued_Invoice_Requires_Total.validationRule-meta.xml
<ValidationRule>
    <fullName>Issued_Invoice_Requires_Total</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Invoice_Status__c, &quot;Issued&quot;),
    OR(
        ISBLANK(Total_Amount__c),
        Total_Amount__c &lt; 0
    )
)</errorConditionFormula>
    <errorDisplayField>Invoice_Status__c</errorDisplayField>
    <errorMessage>An issued invoice cannot have a negative total amount</errorMessage>
</ValidationRule>