force-app/main/default/objects/Invoicee__c/validationRules/Partially_Paid_Requires_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Partially_Paid_Requires_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Invoice_Status__c, &quot;Partially Paid&quot;),
    Amount_Paid__c &lt;= 0
)</errorConditionFormula>
    <errorDisplayField>Invoice_Status__c</errorDisplayField>
    <errorMessage>A Partially Paid invoice must have a payment amount greater than 0</errorMessage>
</ValidationRule>