force-app/main/default/objects/Invoicee__c/validationRules/Payment_Terms_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Terms_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( Payment_Terms__c ))</errorConditionFormula>
    <errorDisplayField>Payment_Terms__c</errorDisplayField>
    <errorMessage>Please select Payment Terms</errorMessage>
</ValidationRule>